# underscore_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-cd.yaml  model-training.yaml
back/: README.md  main.py  metadata_df.csv  precalc.py  requirements.txt
configs/env/: dev.env  prod.env
configs/model_configs/: llm_settings.yaml
data/raw/solana_transactions/: sample_transactions.jsonl
deployments/docker/: worker.Dockerfile
docs/api/: swagger.yaml
docs/architecture/: system_diagram.puml
eliza/characters/: trump.character.json
front/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
front/src/: App.css  App.tsx  index.css  main.tsx
front/src/components/: AIReport.tsx  BestPerformer.tsx  ChartComponent.tsx  CursorFollow.tsx  Footer.tsx  Fundamentals.tsx  Header.tsx  HeatmapMarkets.tsx  Layout.tsx  MarketStateCard.tsx  NavButton.tsx  OverboughtOversold.tsx  PriceDynamics.tsx  ScoreLeaderboard.tsx  SearchBar.tsx  TerminalSearchBar.css  TerminalSearchBar.tsx  TokenInfo.tsx  TokensList.tsx  TopMarketTokens.tsx  TrendingMarkets.tsx  UnderradarMarkets.tsx  UnderradarPicks.tsx
front/src/hooks/: useTheme.tsx
front/src/lib/: api.ts  mock-data.ts  types.ts
models/config/: cfg.yaml
scripts/data_processing/: feature_engineering.py  solana_etl.py
scripts/deployment/: model_upload.py
src/jobs/: background_tasks.py  celery_config.py
tests/connectors/: test_solana_rpc.py
(+27 files in other folders)
